# trader4

./: .gitignore  Cargo.toml  README.md  build.rs  result.txt  return_40p_ret2_20loop.txt  return_sim2_30p.txt  return_sim2_40p_ret.txt  return_sim2_60p_ret.txt  serve.sh  settings.json
arch/brain_bk1/: tailing.rs
arch/sky_eng_bk3/: sky_json.rs
arch/sky_eng_bk4/: scalper.rs
archive/: kline_ta_csv.rs  offline_helper.rs  postion_bk.rs  postion_bk2.rs  shared.rs  trend_pos.rs  vel_dep.rs
archive/bins/: ct1.rs  ct2.rs  ct3.rs  forex.rs  sim_macd.rs  tang.rs  trend2.rs  trends.rs
archive/dc_intel_bk/: frame.rs  mod.rs  parent.rs
archive/offline_old/: mod.rs  tok_kline_ta_csv.rs
archive/play/: hull.rs  mod.rs
archive/trend/: mod.rs
ctrader_dubg/: application_auth_res.txt  get_tick_data.txt  symbols_list.txt  trend_bars.txt
debug/: settings_def.js  symols_debug.txt
debug/ctrader_dubg/: account_auth_res.txt  assets_list.txt  symbols_list.txt  version.txt
debug/ctrader_manual/: events.txt
debug/returns_sim/: return_40p_ret2_60loop.txt  return_sim.txt  return_sim2_30p_ret.txt  return_v2_20_40p__last.txt
old_codes/arch/: index.ts
outputs/: return_sim2_40p_ret_60loop.txt  return_sim2_60p_ret2.txt
src/: lib.rs  pb.rs  policy
src/arch/: report_bk.rs
src/arch1/: back_runner_bk.rs  offline_play_bk.rs
src/base/: events.rs  mod.rs  ohlcv.rs
src/brain/: brain.rs  handler.rs  handler_ne.rs  mod.rs  pair_mem.rs  sim_virtual.rs
src/brain1/: brain1.rs  handler.rs  mod.rs
src/brain2/: brain2.rs  dc_strategy.rs  handler.rs  mod.rs  tailing.rs
src/brain3/: brain3.rs  handler.rs  handler_ne.rs  mod.rs  tailing.rs
src/brain4/: brain4.rs  handler_ne.rs  mod.rs  pair_mem.rs  tailing.rs
src/brain5/: brain5.rs  handler_ne.rs  mod.rs  pair_mem.rs  tailing.rs
src/brain6/: brain6.rs  handler_ne.rs  mod.rs  pair_mem.rs  tailing.rs
src/brain_bk/: handler_ne.rs  sim_virtual.rs
src/candle/: candle_series.rs  candle_series_ta.rs  csv_out.rs  kline.rs  kline_ta.rs  mod.rs  position.rs  position_dep.rs  ser_vec.rs  vol_ser_vec.rs  vol_vec.rs  volume_candle_series_raw.rs  volume_candle_series_ta.rs
src/collector/: collect_utils.rs  dl_collector.rs  downloader.rs  loader.rs  loader_old.rs  mod.rs  row_data.rs
src/configs/: assets.rs  mod.rs
src/core/: brain.rs  cli_types.rs  clock.rs  file_output.rs  file_output_old_sky_eng.rs  gate_api.rs  json_output.rs  mod.rs  types.rs
src/ctrader/: connection.rs  ctrader_helper.rs  event_listener.rs  helper.rs  mod.rs  play.rs  proc.rs
src/dc_intel/: dc_candle.rs  frame.rs  mod.rs  parent.rs  strength.rs
src/docs/: changelog.txt  policy.txt
src/forex/: loader_csv.rs  mod.rs  play.rs
src/helper/: mod.rs
src/ml_feed/: mod.rs
src/ne/: frame.rs  mod.rs  parent.rs  rel.rs  (+1 more)
(+323 files in other folders)
