[package]
name = "trader4"
version = "0.1.0"
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.132"

csv = "1.1"
chrono = "0.4.19"
bincode = "1.3.3"
rand = "0.8.4"

prost = "0.8.0"

byteorder = "1"
bytes = "1.1.0"
rustls = "0.20.0-beta2"
tcp-stream = "0.22.0"
webpki-roots = "0.22.0"
native-tls = "0.2.8"
enum-iterator = "0.7.0"

once_cell = "1.9.0"
lazy_static = "1.4.0"
regex = "1"
threadpool = "1.8.1"
crossbeam-channel = "0.2.6"

[build-dependencies]
prost-build = { version ="0.8.0" }
