[package]
name = "trader4"
version = "0.1.0"
edition = "2018"

# In order not to rebuild in each run if .rs not changed manually run the build, also
#   changed the name as seems cargo rebuild if this "build.rs" exists anyway.  Plus
#   don't include include_bytes! if files to not force complier to rebuild everytime.
#build = "build_manual"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.132"

csv = "1.1"
chrono = "0.4.19"
bincode = "1.3.3"
rand = "0.8.4"

prost = "0.8.0"

byteorder = "1"
bytes = "1.1.0"
rustls = "0.20.0-beta2"
tcp-stream = "0.22.0"
webpki-roots = "0.22.0"
native-tls = "0.2.8"
enum-iterator = "0.7.0"

once_cell = "1.9.0"
lazy_static = "1.4.0"
regex = "1"
threadpool = "1.8.1"
crossbeam-channel = "0.2.6"

rstats = "1.0.13"
clap = { version = "3.1.3", features = ["derive"] }

# Better JSON
json_comments = "0.2.1"
deser-hjson = "1.0.2"

# ML
smartcore = "0.2.1"
linfa = "0.6.0"


# ML - actuly in buuild
approx = "0.4"
linfa-datasets = { version = "0.6.0", path = "./old_codes/_lib/datasets", features = ["winequality"] }

[build-dependencies]
prost-build = { version ="0.8.0" }

# ML
#approx = "0.4"
#linfa-datasets = { version = "0.6.0", path = "./old_codes/_lib/datasets", features = ["winequality"] }